force-app/main/default/objects/WSParamGoogleApi__mdt/WSParamGoogleApi__mdt.object-meta.xml
<CustomObject>
    <label>WS Param Google Api</label>
    <pluralLabel>WS Params Google Api</pluralLabel>
</CustomObject>