force-app/main/default/objects/WSParamGoogleApi__mdt/fields/MethodeAppel__c.field-meta.xml
<CustomField>
    <fullName>MethodeAppel__c</fullName>
    <label>Methode de l&#39;appel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
                <default>true</default>
                <label>GET</label>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>HEAD</fullName>
            </value>
            <value>
                <fullName>TRACE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>