force-app/main/default/objects/WSParamGoogleApi__mdt/fields/Parametres__c.field-meta.xml
<CustomField>
    <fullName>Parametres__c</fullName>
    <label>Paramètres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>